--- a/app/src/main/res/layout/nav_bar.xml
+++ b/app/src/main/res/layout/nav_bar.xml
@@ -15,12 +15,10 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
-
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/gameplay"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,23 +27,19 @@
             android:text="Gameplay"
             android:textSize="20dp"
             android:fontFamily="@font/breeserif"/>
-
-
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/archive"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:orientation="horizontal">
-
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/archive"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,7 +48,6 @@
             android:text="Archive"
             android:textSize="20dp"
             android:fontFamily="@font/breeserif"/>
-
 
     </LinearLayout>
 
@@ -65,12 +58,10 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:orientation="horizontal">
-
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/history"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -79,11 +70,7 @@
             android:text="History"
             android:textSize="20dp"
             android:fontFamily="@font/breeserif"/>
-
-
     </LinearLayout>
-
-
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -92,12 +79,10 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="80dp"
         android:orientation="horizontal">
-
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/profile"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -106,9 +91,8 @@
             android:text="Profile"
             android:textSize="20dp"
             android:fontFamily="@font/breeserif"/>
-
-
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -117,12 +101,10 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:orientation="horizontal">
-
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/faqs"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -130,9 +112,9 @@
             android:textColor="@color/white"
             android:text="FAQs"
             android:textSize="20dp"/>
-
-
     </LinearLayout>
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -154,9 +136,9 @@
             android:text="Feedback"
             android:textSize="20dp"
             android:fontFamily="@font/breeserif"/>
-
-
     </LinearLayout>
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
