--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="blk">#272829</color>
     <color name="blk2">#3b5875</color>
     <color name="font_color">#f6f4eb</color>
+    <color name="archive">#505050</color>
 </resources>
